@@ -21,6 +21,10 @@
 	</P>
 	<UL>
 		<LI>
+			<STRONG>Milestone&nbsp;1.2.6</STRONG> (31.10.2005) r4786
+			<P>See changelog for details.</P>
+		</LI>
+		<LI>
 			<STRONG>Milestone&nbsp;1.2.5</STRONG> (22.10.2005) r4719
 			<P>See changelog for details.</P>
 		</LI>
